--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -27,29 +27,29 @@
         <div class="menu">
             <ul class="list">
                 <li class="header">MAIN NAVIGATION</li>
-                <!-- <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
+                <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
                     <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
                         <li class="mat-tree-node" routerLink="{{node.route}}" routerLinkActive="active-link">
                             <button mat-icon-button disabled></button>
-                            {{node.name}}
+                            {{node.MODULE_NAME}}
                         </li>
                     </mat-tree-node>
                     <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
                         <li routerLinkActive="active">
                             <div class="mat-tree-node">
-                                <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'toggle ' + node.name">
+                                <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'toggle ' + node.MODULE_NAME">
                                     <mat-icon class="mat-icon-rtl-mirror">
                                         {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
                                     </mat-icon>
                                 </button>
-                                {{node.name}}
+                                {{node.MODULE_NAME}}
                             </div>
                             <ul [class.example-tree-invisible]="!treeControl.isExpanded(node)">
                                 <ng-container matTreeNodeOutlet></ng-container>
                             </ul>
                         </li>
                     </mat-nested-tree-node>
-                </mat-tree> -->
+                </mat-tree>
                 <li routerLinkActive="active">
                     <a href="javascript:void(0);" routerLink="/home" routerLinkActive="active-link">
                         <i class="material-icons">home</i>
@@ -223,6 +223,19 @@
                         </li>
                     </ul>
                 </li> -->
+                <li routerLinkActive="active">
+                    <a href="javascript:void(0);" class="menu-toggle">
+                        <i class="material-icons">print</i>
+                        <span>Reports</span>
+                    </a>
+                    <ul class="ml-menu">
+                        <li routerLinkActive="active">
+                            <a href="javascript:void(0);" routerLink="/report" routerLinkActive="active-link">
+                                <span>Report</span>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
             </ul>
         </div>
 
